--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <li class="top-link index"><a href="#section-overview">OVERVIEW</a></li>
                     <li class="top-link index"><a href="#section-how-it-works">HOW IT WORKS</a></li>
                     <li class="top-link index"><a href="#section-team">THE TEAM</a></li>
-                    <li class="top-link index"><a href="#section-contact">CONTACT US</a></li>
-                    <li class="top-link index"><div style="padding-top: 5px"><button id="button-learn-more"type="button" class= "ghost-btn">SIGN UP</button></div></li>
+                    <li class="top-link index" style="padding-right: 5px"><a href="#section-contact">CONTACT US</a></li>
+                    <li class="top-link index"><div style="padding-top: 5px"><button id="nav-sign-up"type="button" class= "ghost-btn">SIGN UP</button></div></li>
 
                 </ul>
             </nav>
@@ -113,6 +113,7 @@
                 $(element).css({
                     "background": "url(./images/muvr-banner.jpg) no-repeat fixed center center",
                     "background-size" : "cover"
+
                 });
 
             } else {
@@ -132,12 +133,13 @@
         }); */
         $(".navbar").sticky({});
         $(".navbar").on('sticky-start', function(){
-            $("#navbar-logo").css("width", 85);
+            $("#navbar-logo").css("width", 85).attr('src', 'images/logo-white.png');
             $(".navbar-default .navbar-nav>li>a").css('font-size','12px');
             $(".navbar-default .navbar-nav>li>div>button").css('font-size','12px');
         });
         $(".navbar").on('sticky-end', function(){
             $("#navbar-logo").css("width", 147);
+            $("#navbar-logo").attr('src', 'images/logo.png');
             $(".navbar-default .navbar-nav>li>a").css('font-size','14px');
             $(".navbar-default .navbar-nav>li>div>button").css('font-size','14px');
 
