Finished section overview, added side prev,next button in carousel(still need to change to arrow), meet the team section in progress

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
         <div class="wrapper">
             <div id="banner-carousel" class="owl-carousel owl-theme">
-                <div class="shoppr-banner" style="color: white; padding-top:275px; padding-left:50px">
+                <div class="shoppr-banner" style="color: white; padding-top:275px; padding-left:70px">
                     <h1>MINIMISE DISTANCE</h1>
                     <h3>Shop like you're on the other side of the world with Plugg</h3>
                     <h5 style="padding-bottom: 10px">LEARN MORE</h5>
                     <button id="view-muvrs" type="button" class="ghost-btn">VIEW MUVRS</button>
                 </div>
-                <div class="muvr-banner" style="color: white; padding-top:275px; padding-left:50px">
+                <div class="muvr-banner" style="color: white; padding-top:275px; padding-left:70px">
                     <h1>MAXIMISE TRAVEL</h1>
                     <h3>Extra luggage space can mean extra earnings with Plugg</h3>
                     <h5 style="padding-bottom: 10px">LEARN MORE</h5>
@@ -65,7 +65,7 @@
 
             <section id="section-overview">
                 <h2>Plugg is the peer-to-peer shipping solution for the modern Filipino</h2>
-                <!--hr class="grayscale"-->
+
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4" >
@@ -80,6 +80,7 @@
                         <div class="col-md-4" >
                             <div class="overview-card">
                                 <div class="about-text">
+                                    <img src="images/plane.png" width="250px">
                                     <h3>DELIVERY</h3>
                                     <p>Muvrs going to the Philippines bring with them purchases made by Shopprs</p>
                                 </div>
@@ -88,12 +89,80 @@
                         <div class="col-md-4" >
                             <div class="overview-card">
                                 <div class="about-text">
+                                    <img src="images/hassle-free.png" width="250px">
                                     <h3>HASSLE FREE</h3>
                                     <p>Plugg is an efficient and effective way to get purchases at your convenience</p>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section id="section-team">
+                <h1>MEET THE TEAM</h1>
+                <hr class="grayscale">
+                <div class="row">
+                <h3 style="line-height: 1.3">"Here at Plugg, we aim to be the bridge between the Shopprs in the Philippines and the costly and lengthy international shipping services that couriers usually offer, by providing an efficient and assure alternative for your buying convenience."
+                </h3>
+                </div>
+                <div class="row " style="padding-left:70px; padding-right:70px">
+                    <div class="col-md-1" > <!--1-->
+                        <div class="overview-card">
+                            <div class="about-text">
+                                <img src="images/cuevas.JPG" width="100px">
+                                <h3>VINCH CUEVAS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1" > <!--2-->
+                        <div class="overview-card">
+                            <div class="about-text">
+                                <img src="images/cuevas.JPG" >
+                                <h3>VINCH CUEVAS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1" > <!--3-->
+                        <div class="overview-card">
+                            <div class="about-text">
+                                <img src="images/cuevas.JPG">
+                                <h3>VINCH CUEVAS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1" > <!--4-->
+                        <div class="overview-card">
+                            <div class="about-text">
+                                <img src="images/cuevas.JPG">
+                                <h3>VINCH CUEVAS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1" > <!--5-->
+                        <div class="overview-card">
+                            <div class="about-text">
+                                <img src="images/cuevas.JPG" >
+                                <h3>VINCH CUEVAS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1" > <!--6-->
+                        <div class="overview-card">
+                            <div class="about-text">
+                                <img src="images/cuevas.JPG">
+                                <h3>VINCH CUEVAS</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1" > <!--7-->
+                        <div class="overview-card">
+                            <div class="about-text">
+                                <img src="images/cuevas.JPG">
+                                <h3>VINCH CUEVAS</h3>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
         </div>
