Added how it works section and meet the team section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <section id="section-overview">
-                <h2>Plugg is the peer-to-peer shipping solution for the modern Filipino</h2>
+                <h2 style="margin-bottom : 50px">Plugg is the peer-to-peer shipping solution for the modern Filipino</h2>
 
                 <div class="container">
                     <div class="row">
@@ -98,67 +98,94 @@
                     </div>
                 </div>
             </section>
+            <section id="section-how-it-works">
+
+                <h1>HOW IT WORKS</h1>
+                <button id="how-it-works-shoppr" class="how-it-work-buttons">SHOPPR</button>
+                <button id="how-it-works-muvr" class="how-it-work-buttons">MUVR</button>
+                <h3>I am a Shoppr who wants my item delivered to the Philippines</h3>
+                <div class="how-it-works-container">
+                    <ol id="how-it-works-shoppr-list" class="how-it-works-list">
+                        <li>Select a Muvr who fits your desired schedule and point of delivery.</li>
+                        <li>Purchase your desired parcel.</li>
+                        <li>Connect with a Muvr</li>
+                        <li>Purchase your item from any website</li>
+                        <li>Confirm delivery etails with Muvr</li>
+                        <li>Receive your parcel</li>
+                    </ol>
+                    <ol id="how-it-works-muvr-list" class="how-it-works-list">
+                        <li>Sean</li>
+                        <li>Vinch</li>
+                        <li>Paog</li>
+                        <li>John</li>
+                        <li>Wesley</li>
+                        <li>Matt</li>
+                        <li>Enzo</li>
+                    </ol>
+                </div>
+            </section>
             <section id="section-team">
                 <h1>MEET THE TEAM</h1>
                 <hr class="grayscale">
                 <div class="row">
-                <h3 style="line-height: 1.3">"Here at Plugg, we aim to be the bridge between the Shopprs in the Philippines and the costly and lengthy international shipping services that couriers usually offer, by providing an efficient and assure alternative for your buying convenience."
-                </h3>
+                    <h3 style="line-height: 1.3">"Here at Plugg, we aim to be the bridge between the Shopprs in the Philippines and the costly and lengthy international shipping services that couriers usually offer, by providing an efficient and assure alternative for your buying convenience."
+                    </h3>
                 </div>
-                <div class="row " style="padding-left:70px; padding-right:70px">
-                    <div class="col-md-1" > <!--1-->
+                <div class="row seven-cols ">
+                    <div class="col-md-1 col-centered" > <!--1-->
                         <div class="overview-card">
                             <div class="about-text">
-                                <img src="images/cuevas.JPG" width="100px">
+                                <img class='img-circle' src="images/cuevas.JPG">
                                 <h3>VINCH CUEVAS</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-1" > <!--2-->
+                    <div class="col-md-1 col-centered" > <!--2-->
                         <div class="overview-card">
                             <div class="about-text">
-                                <img src="images/cuevas.JPG" >
+                                <img class='img-circle'src="images/san-pedro.JPG" >
                                 <h3>VINCH CUEVAS</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-1" > <!--3-->
+                    <div class="col-md-1 col-centered" > <!--3-->
                         <div class="overview-card">
                             <div class="about-text">
-                                <img src="images/cuevas.JPG">
+                                <img class='img-circle'src="images/seanyu.png">
                                 <h3>VINCH CUEVAS</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-1" > <!--4-->
+                    <div class="col-md-1 col-centered" > <!--4-->
                         <div class="overview-card">
                             <div class="about-text">
-                                <img src="images/cuevas.JPG">
+                                <img class='img-circle'src="images/enzo.png">
                                 <h3>VINCH CUEVAS</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-1" > <!--5-->
+                    <div class="col-md-1 col-centered" > <!--5-->
                         <div class="overview-card">
                             <div class="about-text">
-                                <img src="images/cuevas.JPG" >
+                                <img class='img-circle'src="images/wesley.png" >
                                 <h3>VINCH CUEVAS</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-1" > <!--6-->
+                    <div class="col-md-1 col-centered" > <!--6-->
                         <div class="overview-card">
                             <div class="about-text">
-                                <img src="images/cuevas.JPG">
+                                <img class='img-circle'src="images/john.jpg">
                                 <h3>VINCH CUEVAS</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-1" > <!--7-->
+                    <div class="col-md-1 col-centered" > <!--7-->
                         <div class="overview-card">
                             <div class="about-text">
-                                <img src="images/cuevas.JPG">
-                                <h3>VINCH CUEVAS</h3>
+                                <img class='img-circle'src="images/paog.jpg">
+                                <h3 style="line-height: 24px">PAOG<br>CUO</h3>
+
                             </div>
                         </div>
                     </div>
