Fixed animsition file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
         <link rel="stylesheet" href="js/slick/slick-theme.css">
-        <link rel="stylesheet" href="js/animsition/dist/css/animsition.min.css">
+        <link rel="stylesheet" href="css/animsition.min.css">
         <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css">
         <link rel="stylesheet" href="js/owl-carousel/owl.theme.css">
         <link rel="stylesheet" href="css/default.css">
@@ -199,7 +199,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/animsition/dist/js/animsition.min.js"></script>
+    <script src="js/animsition.min.js"></script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/jquery.sticky.js"></script>
     <script src="js/owl-carousel/owl.carousel.js"></script>
