Added get in touch section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header class="navbar navbar-default container-fluid">
             <nav class="menu" >
                 <div class="navbar-header" style="background: transparent">
-                    <div class="navbar-brand indexheader"><a href="#section-title"><img id="navbar-logo"class= ""src="images/logo.png" width="147" height=""></a>
+                    <div class="navbar-brand indexheader"><a href="#section-title"><img id="navbar-logo" class= "" src="images/logo.png" width="147" height=""></a>
                     </div>
                     <div class="toggle-button-wrapper navbar-right" style="background: white">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-nav-collapse">
@@ -40,8 +40,8 @@
                     <li class="top-link index"><a href="#section-overview">OVERVIEW</a></li>
                     <li class="top-link index"><a href="#section-how-it-works">HOW IT WORKS</a></li>
                     <li class="top-link index"><a href="#section-team">THE TEAM</a></li>
-                    <li class="top-link index" style="padding-right: 5px"><a href="#section-contact">CONTACT US</a></li>
-                    <li class="top-link index"><div style="padding-top: 5px"><button id="nav-sign-up"type="button" class= "">SIGN UP</button></div></li>
+                    <li class="top-link index" style="padding-right: 5px"><a href="#section-get-in-touch">CONTACT US</a></li>
+                    <li class="top-link index"><div style="padding-top: 5px"><button id="nav-sign-up" type="button" class= "">SIGN UP</button></div></li>
 
                 </ul>
             </nav>
@@ -104,7 +104,7 @@
                 <button id="how-it-works-shoppr" class="how-it-work-buttons">SHOPPR</button>
                 <button id="how-it-works-muvr" class="how-it-work-buttons">MUVR</button>
                 <h3>I am a Shoppr who wants my item delivered to the Philippines</h3>
-                <div class="how-it-works-container">
+                <div class="how-it-works-container" >
                     <ol id="how-it-works-shoppr-list" class="how-it-works-list">
                         <li>Select a Muvr who fits your desired schedule and point of delivery.</li>
                         <li>Purchase your desired parcel.</li>
@@ -114,15 +114,15 @@
                         <li>Receive your parcel</li>
                     </ol>
                     <ol id="how-it-works-muvr-list" class="how-it-works-list">
-                        <li>Sean</li>
-                        <li>Vinch</li>
-                        <li>Paog</li>
-                        <li>John</li>
-                        <li>Wesley</li>
-                        <li>Matt</li>
-                        <li>Enzo</li>
+                        <li>Post your travel listing</li>
+                        <li>Connect with a Shoppr</li>
+                        <li>Confirm received items with Shoppr</li>
+                        <li>Muv the parcel</li>
+                        <li>Deliver to Shoppr</li>
+                        <li>Receive your premium</li>
                     </ol>
                 </div>
+                <button id="get-started" class="how-it-work-buttons">GET STARTED</button>
             </section>
             <section id="section-team">
                 <h1>MEET THE TEAM</h1>
@@ -192,6 +192,47 @@
 
                 </div>
             </section>
+            <section id="section-get-in-touch">
+                <h1>GET IN TOUCH</h1>
+                <h3>Questions? Don't hesitate to ask us</h3>
+                <h4>Or view the <a href="">FAQs</a></h4>
+                <br>
+                <form class="form-horizontal" id="contact_form">
+                    <fieldset>
+                        <!-- Form Name -->
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="name">Name</label>
+                            <div class="col-md-5">
+                                <input id="name" name="name" type="text" placeholder="Enter your full name here" class="form-control input-md" required="">
+
+                            </div>
+                        </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="email">Email</label>
+                            <div class="col-md-5">
+                                <input id="email" name="email" type="text" placeholder="Enter your email address here" class="form-control input-md" required="">
+
+                            </div>
+                        </div>
+                        <!-- Textarea -->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="msg">Message</label>
+                            <div class="col-md-4">
+                                <textarea class="form-control" placeholder="Type your message here" id="msg" name="msg" cols="6" rows="6"></textarea>
+                            </div>
+                        </div>
+                        <!-- Button -->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="submit"></label>
+                            <div class="col-md-4">
+                                <button name="submit" id="submit" class="how-it-work-buttons">SUBMIT</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </section>
         </div>
 
     </div>
@@ -203,9 +244,8 @@
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/jquery.sticky.js"></script>
     <script src="js/owl-carousel/owl.carousel.js"></script>
+    <script type="text/javascript" src="http://mandrillapp.com/api/docs/js/mandrill.js"></script>
     <script src="js/default.js"></script>
-    <script>
-
-    </script>
+    <script src="js/getintouch.js"></script>
 
 </html>
